# trace_extractor

./: .gitignore  README.md  setup.cfg
input/: .gitignore
output/: .gitignore
src/trace_extractor/: __init__.py  __main__.py  data_extract.py  data_transform.py  entry_point.py  input_file_sanitizing.py  logger.py
