[metadata]
name = trace_extractor
version = 0.0.1
author = Pierre Wendling
author_email = pierre.wendling.4@gmail.com
description = MPEG-4 Trace extractor for ns-3
license = GPLv3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FtZPetruska/trace_extractor
project_urls =
    Bug Tracker = https://github.com/FtZPetruska/trace_extractor
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
        trace_extractor = trace_extractor.main:main
